[package]
name = "im920_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
# srobo_base = { git = "https://github.com/nnctroboticsclub/srobo_base.git" }
srobo_base = { path = "../srobo_base", features=["alloc"] }

[features]
default = []
std = []