[package]
name = "im920_rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
srobo_base = { git = "ssh://git@github.com/nnctroboticsclub/srobo_base.git", features=["alloc"] }
# srobo_base = { path = "../srobo_base", features=["alloc"] }

[features]
default = []
std = []